# pelorus

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  meson.build  meson_options.txt
.claude/: settings.json
.claude/agents/: c-reviewer.md  doc-reviewer.md  ffmpeg-patch-reviewer.md  interop-abi-reviewer.md  pr-body-checker.md  vulkan-shader-reviewer.md
.claude/hooks/: auto-format-on-edit.sh  block-unsafe-bash.sh  docs-drift-warn.sh  session-start.sh  shader-lockstep-warn.sh  stop.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
changelog.d/: README.md
changelog.d/added/: 0001-libpelorus-interop-abi.md  0102-vf-pelorus-deband-vulkan.md  0109-analyze.md  0110-avoption-control-plane-contract.md  0111-bench-harness.md  0112-vf-pelorus-denoise-vulkan.md  0114-analyze-roi.md  0114-encoder-steering-roadmap.md  0114-nvenc-roi.md  0114-qsv-roi.md  0114-vulkan-qpmap-gpu-raster.md  0114-vulkan-qpmap.md  0115-vf-pelorus-grain-estimate-vulkan.md  0116-nvenc-me-hints.md  0116-vf-pelorus-mc-vulkan.md  0117-pelorus-fgs-bsf.md  0118-nvenc-av1-filmgrain.md  0119-qp-feedback.md  0120-libaom-roi.md  0121-svtav1-roi.md  0122-qp-feedback-csv-reader.md  0123-anime-dehalo.md  0124-anime-aa.md  0125-anime-tune.md  0126-scenecut-idr.md  0127-deblock.md  0128-borderfix.md  0130-mc-subpel-quarterpel.md  0131-mc-denoise-warp.md  0131-warp-bench-results.md  0132-analyze-complexity.md  0132-mc-subgroup-perf.md  0132-per-shot-crf-design.md  0134-denoise-tile.md  0136-analyze-metadata.md  0137-denoise-lookahead.md  0139-dehalo-tile.md  0140-aa-fast.md  0142-grain-sigma-metadata.md
changelog.d/changed/: 0133-analyze-coarse-banding.md  0141-deband-wide-band-reach-rejected.md  0142-ss2-metric-tuned-settings.md
changelog.d/fixed/: 0003-denoise-meta-uint32-overflow.md  0111-link-and-bd-rate.md  0114-qsv-priv-data-sigsegv.md  0115-grain-glsl-modulo-sigsegv.md  0129-inline-glsl-chroma-passthrough.md  0138-bug-hunt.md
docs/: principles.md  rebase-notes.md  references.md
docs/adr/: 0000-template.md  0001-project-genesis.md  0100-doc-substance-rule.md  0102-flagship-smart-deband.md  0103-interop-sidedata-abi.md  0104-ffmpeg-patch-stack.md  0105-libpelorus-license.md  0106-autotune-control-plane.md  0108-deep-dive-deliverables-rule.md  0109-analyze-filter.md  0110-avoption-control-plane-contract.md  0111-benchmark-methodology.md  0112-temporal-denoise.md  0113-optical-flow-mc.md  0114-encoder-steering.md  0115-grain-estimate.md  0116-pelorus-mc.md  0117-grain-fgs-bsf.md  0118-nvenc-av1-filmgrain.md  0119-qp-feedback.md  0120-libaom-steering.md  0121-svtav1-steering.md  0122-qp-feedback-csv-reader.md  0123-anime-dehalo.md  0124-anime-aa.md  0125-anime-tune.md  0126-scenecut-idr.md  0127-deblock.md  0128-borderfix.md  0129-inline-glsl-chroma-passthrough-fix.md  0130-mc-subpel-quarterpel.md  0131-mc-denoise-warp.md  0132-per-shot-crf-steering.md  0133-analyze-coarse-banding-cambi.md  0134-denoise-shared-mem-tile.md  0135-analyze-perceptual-aq-map.md  0136-analyze-frame-metadata.md  0137-denoise-forward-lookahead-cadence.md  0138-bug-hunt-remediation.md  0139-dehalo-shared-mem-tile.md  (+4 more)
docs/api/: control-plane.md  interop-abi.md
docs/architecture/: overview.md
docs/backends/: libaom-roi.md  vulkan.md
docs/development/: bench-results.md  benchmarking.md  build.md
docs/metrics/: aa.md  analyze.md  borderfix.md  deband.md  deblock.md  dehalo.md  denoise.md  grain_estimate.md  mc.md  qp-feedback.md  scenecut.md
docs/research/: 0101-smart-deband.md
docs/usage/: anime.md  ffmpeg.md  grain-fgs-bsf.md
ffmpeg-patches/: .commit-msg-aa.txt  .commit-msg-analyze.txt  .commit-msg-borderfix.txt  .commit-msg-deband.txt  .commit-msg-deblock.txt  .commit-msg-dehalo.txt  .commit-msg-denoise.txt  .commit-msg-fgs-bsf.txt  .commit-msg-grain_estimate.txt  .commit-msg-libaom.txt  .commit-msg-mc.txt  .commit-msg-nvenc-film-grain.txt  .commit-msg-nvenc-me-hints.txt  .commit-msg-nvenc.txt  .commit-msg-qsv.txt  .commit-msg-scenecut.txt  .commit-msg-svtav1.txt  .commit-msg-vulkan.txt  0001-add-vf_pelorus_deband_vulkan.patch  0002-add-vf_pelorus_analyze_vulkan.patch  0003-add-vf_pelorus_denoise_vulkan.patch  0004-nvenc-pelorus-roi.patch  0005-qsv-pelorus-roi.patch  0006-add-vf_pelorus_grain_estimate_vulkan.patch  0007-add-vf_pelorus_mc_vulkan.patch  0008-nvenc-pelorus-me-hints.patch  0009-vulkan-pelorus-qpmap.patch  0010-add-pelorus_fgs_bsf.patch  0011-nvenc-pelorus-film-grain.patch  0012-libaom-pelorus-roi.patch  0013-svtav1-pelorus-roi.patch  0014-add-vf_pelorus_dehalo_vulkan.patch  0015-add-vf_pelorus_aa_vulkan.patch  0016-add-vf_pelorus_scenecut.patch  0017-add-vf_pelorus_deblock_vulkan.patch  0018-add-vf_pelorus_borderfix_vulkan.patch  AGENTS.md  README.md  generate.sh  series.txt
ffmpeg-patches/files/: h265_pelorus_fgs_bsf.c  libaom-pelorus-roi.patch  nvenc-pelorus-film-grain.patch  nvenc-pelorus-me-hints.patch  (+14 more)
libpelorus/: AGENTS.md  meson.build
libpelorus/include/pelorus/: deband.h  denoise.h  interop.h  pelorus.h
libpelorus/shaders/: meson.build  pelorus_aa.comp  pelorus_analyze.comp  pelorus_borderfix.comp  pelorus_deband.comp  pelorus_deblock.comp  pelorus_dehalo.comp  pelorus_denoise.comp  pelorus_grain_estimate.comp  pelorus_mc.comp  pelorus_qpmap.comp
libpelorus/src/: deband_params.c  denoise_params.c  interop.c  qp_report_csv.c  version.c
libpelorus/test/: interop_test.c  meson.build
tools/: AGENTS.md  meson.build  pelorus_qp_report.c
(+18 files in other folders)
